# pysegmenttree

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  MANIFEST  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.dev.in  requirements.dev.txt  setup.py
.github/workflows/: ci.yaml  release.yaml
benchmarks/: benchmark.py
benchmarks/with_other_libs/: main.py  plotter.py  wrappers.py
benchmarks/with_other_libs/data/: bench_results.json
docs/: conf.py  index.rst  pysegmenttree.rst
pysegmenttree/: __init__.py  _abc.py  _pysegmenttree.c  _pysegmenttree_py.py  _segmenttree.py  after.txt  c_extensions.c  c_extensions.pyi  test_utils.py
pysegmenttree/_extensions/: common.h  floatsegmenttree.h  intsegmenttree.h
requirements/: requirements.bench.in  requirements.bench.txt  requirements.dev.in  requirements.dev.txt
tests/: test.py  test_float_segmenttree.py  test_general.py  test_int_segmenttree.py  test_pysegmenttree.py  test_segmenttree.py  test_stree.py
