[build-system]
requires = ["setuptools>=40", "wheel>=0.32"]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=pysegmenttree --cov-report=xml"
testpaths = [
    "tests",
]


[tool.black]
line-length = 88
target-version = ['py39']
include = 'pysegmenttree/.*\.py|tests/.*\.py|benchmarks/.*\.py|setup.py'
